classDiagram
class GameController {
    -List~IPlayer~ _players
    -IDiscardTile _discardTile 
    -ICard card
    -Dictionary <.IPlayer,List<.ICard>> _hand
    -int _currentPlayerIndex
    -List~ICard~ _deck
    +Action~ICard~ OnStart
    +Action OnScore
    +Random rand
    +GameController(List~IPlayer~ players)
    +StartGame() void
    %% new func not in class diagram
    +GetCurrentPlayerIndex() int
    +GetCurrentPlayer() IPlayer
    +GetPlayerHand(IPlayer player) List~ICard~
    +GetDiscardTile() IDiscardTile
    +InitDeck() void
    +ShuffleDeck() void
    +InitHand() void
    +ResetRound() void
    +HandleBlockedGame() void
    %% end of new func not in class diagram
    +AddCard(ICard card) void
    +IsDoubleValue() boolean
    +IsEmpty() boolean
    +DetermineStartingPlayer() IPlayer
    +NextTurn() void
    +HasPlayableCard(IDiscardTile discardTile) boolean
    +FindPlayableCard(IDiscardTile discardTile, ICard cardToCheck) boolean %% used to be ICard not bool
    +PlayCard(IPlayer player , ICard card , string positionCard) boolean
    +RotateValue() void 
    +PlaceCard(ICard card, string positionCard) boolean  
    +RemoveCard(ICard card) boolean
    +CheckWinCondition() boolean
    +AddScore(int points) void
    +CalculateScore() int
    +EndGame() void
}
class Player {
    -string _name
    -int _score
    +Player(string name)
    +GetScore() int
    +SetScore(int score) void
    +GetName() string
    +SetName(string name) void
}
class Card {
    -int _leftValueCard
    -int _rightValueCard
    +Card(int leftValueCard , int rightValueCard)
    +GetLeftValueCard() int
    +SetLeftValueCard(int value) void
    +GetRightValueCard() int
    +SetRightValueCard(int value) void
    +GetOtherValueCard(int value) int
    +ToString() string
}
class DiscardTile {
    -List~ICard~ _playedDominoes 
    -int _leftValueDiscardTile
    -int _rightValueDiscardTile
    +GetLeftValueDiscardTile() int
    +SetLeftValueDiscardTile(int value) void
    +GetRightValueDiscardTile() int
    +SetRightValueDiscardTile(int value) void
    +GetPlayedCards() List~ICard~
    +SetPlayedCards(List~ICard~ card) void
}
class IDiscardTile {
    <<interface>>
    +GetLeftValueDiscardTile() int
    +SetLeftValueDiscardTile(int value) void
    +GetRightValueDiscardTile() int
    +SetRightValueDiscardTile(int value) void
    +GetPlayedCards() List~ICard~
    +SetPlayedCards(List~ICard~ card) void
}
class IPlayer {
    <<interface>>
    +GetScore() int
    +SetScore(int score) void
    +GetName() string
    +SetName(string name) void
}
class ICard {
    <<interface>>
    +GetLeftValueCard() int
    +SetLeftValueCard(int value) void
    +GetRightValueCard() int
    +SetRightValueCard(int value) void
    +GetOtherValueCard(int value) int
}
%%implementasi
DiscardTile --|> IDiscardTile
Player --|> IPlayer
Card --|> ICard
%%assosiation
DiscardTile --* ICard
IDiscardTile --> ICard
GameController --* IPlayer
GameController --* IDiscardTile
GameController --* ICard
Player --* ICard